<resources>
    <string name="app_name">Ignis</string>
    <string name="search_box_hint">Search for characters, issues, comics, etc</string>
    <string name="search">Search</string>
    <string name="search_shortcut_disabled">Search shortcut is disabled</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="title_dark_mode">Dark Mode</string>
    <string name="licenses">Licenses</string>
    <string name="app_copyright">© 2018 Kunaal Kumar</string>
    <string name="version">Version</string>
    <string name="character">Character</string>
    <string name="favorite">Favorite</string>
    <string name="go_to_random_page">Random page</string>
    <string name="random">random</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_name_nf">Error: Name not found</string>
    <string name="preferences">Preferences</string>
    <string name="social">Social</string>
    <string name="google_plus_community">Google Plus Community</string>
    <string name="subreddit">r/IgnisAndroid</string>
    <string name="rate_ignis">Rate Ignis</string>
    <string name="current_size">Current size</string>
    <string name="max_size">Max size</string>
    <string name="high_preview_image_quality">High Preview Image Quality</string>
    <string name="Search_for_something">Search for something</string>
    <string name="publisher_not_found">Publisher not found</string>
    <string name="Real_name_not_found">Real name not found</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="Deck">Deck</string>
    <string name="General_Information">General Information</string>
    <string name="Real_Name">Real Name</string>
    <string name="Aliases">Aliases</string>
    <string name="no_aliases">No aliases</string>
    <string name="publisher">publisher</string>
    <string name="Publisher">Publisher</string>
    <string name="Comic_Information">Comic Information</string>
    <string name="gender">Gender</string>
    <string name="Character_Type">Character Type</string>
    <string name="not_found">Not found</string>
    <string name="Origin">Origin</string>
    <string name="Birthday">Birthday</string>
    <string name="full_image_width">Full Image Width</string>
    <string name="image_of_character">Image of character</string>
    <string name="creators">Creators</string>
    <string name="issues_died_in">Issues Died In</string>
    <string name="powers">Powers</string>
    <string name="teams">Teams</string>
</resources>
