<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/character_comic_info_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical"
    app:cardCornerRadius="4dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/character_comic_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:text="@string/Comic_Information"
            android:textAlignment="center"
            android:textSize="21sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/character_gi_publisher_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_comic_title"
            android:layout_alignParentStart="true"
            android:layout_margin="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/open_sans"
            android:padding="16dp"
            android:text="@string/Publisher"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/character_gi_publisher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/character_gi_publisher_title"
            android:layout_alignTop="@id/character_gi_publisher_title"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:layout_toEndOf="@id/character_gi_publisher_title"
            android:fontFamily="@font/open_sans"
            android:padding="8dp"
            android:text="@string/publisher_not_found"
            android:textAlignment="center"
            app:cornerRadius="15dp" />

        <TextView
            android:id="@+id/character_gi_creators_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_gi_publisher"
            android:layout_alignStart="@id/character_gi_publisher_title"
            android:layout_alignEnd="@id/character_gi_publisher_title"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/open_sans"
            android:padding="16dp"
            android:text="Creators"
            android:textAlignment="center"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/character_gi_creators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/character_gi_publisher"
            android:layout_alignStart="@id/character_gi_publisher"
            android:layout_alignEnd="@id/character_gi_publisher"
            android:text="@string/publisher_not_found"
            tools:listitem="@layout/view_character_creators" />
    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>