<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    app:cardElevation="8dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/cardBackgroundColor"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:gravity="start"
                android:padding="16dp"
                android:text="@string/social"
                android:textAlignment="center"
                android:textColor="?attr/headingTextColor"
                android:textSize="21sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/settings_google_plus_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@mipmap/ic_google_plus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/settings_google_plus_text"
                app:layout_constraintHorizontal_bias="0.181"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settings_google_plus_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="16dp"
                android:text="@string/google_plus_community"
                android:textColor="?attr/headingTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.524"
                app:layout_constraintStart_toEndOf="@+id/appCompatTextView"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/settings_reddit_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:src="@mipmap/ic_reddit"
                app:layout_constraintEnd_toEndOf="@+id/settings_google_plus_image"
                app:layout_constraintStart_toStartOf="@+id/settings_google_plus_image"
                app:layout_constraintTop_toBottomOf="@+id/settings_google_plus_image" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settings_reddit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="16dp"
                android:text="@string/subreddit"
                android:textColor="?attr/headingTextColor"
                app:layout_constraintEnd_toEndOf="@+id/settings_google_plus_text"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/settings_google_plus_text"
                app:layout_constraintTop_toBottomOf="@+id/settings_google_plus_text" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/settings_play_store_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:src="@mipmap/ic_play_store"
                app:layout_constraintEnd_toEndOf="@+id/settings_reddit_image"
                app:layout_constraintStart_toStartOf="@+id/settings_reddit_image"
                app:layout_constraintTop_toBottomOf="@+id/settings_reddit_image" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/settings_play_store_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="@font/roboto_medium"
                android:padding="16dp"
                android:text="@string/rate_ignis"
                android:textColor="?attr/headingTextColor"
                app:layout_constraintEnd_toEndOf="@+id/settings_reddit_text"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/settings_reddit_text"
                app:layout_constraintTop_toBottomOf="@+id/settings_reddit_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>